--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- student hero section -->
         <div class="student-info clearfix">
                 <img src="images/responsive-layout-profile.png" alt="profile image">
-                <p>Hello there. I'm a Visual Designer that is currently learning HTML, CSS and JS. I'm looking forward to learning and acquiring this tech degree!</p>
+                <p>Hello there! I'm a Visual Designer that is currently learning HTML, CSS and JS. I'm looking forward to learning and acquiring this tech degree!</p>
         </div>
 
     <!-- portfolio section -->
