--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- top section -->
     <header>
         <div class="main-header">
-            <h2 id="home" class="student-name">Meng Yang is my name.</h2>
+            <h2 id="home" class="student-name">Meng Yang. Designer.</h2>
                 <nav class="main-nav">
                     <ul>
                         <li><a href="#">Home</a></li>
