--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </nav>
         </div>
     </header>
-
-    
+</div>
+ 
     <!-- student hero section -->
         <div class="student-info clearfix">
                 <img src="images/responsive-layout-profile.png" alt="profile image">
@@ -40,37 +40,37 @@
 
         <div class="portfolio-blocks clearfix">
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-1.png">
+                    <img src="images/portfolio-1.png" alt="marketing page image">
                     <h3>Marketing Page</h3>
                     <p>This project shows the front page of a marketing website meant for a specific business I'm interest in.</p>
                 </div>
 
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-2.png">
+                    <img src="images/portfolio-2.png" alt="search page image">
                     <h3>Search Page</h3>
                     <p>This project searches through a specific database to find information that the user is trying to look up.</p>
                 </div>
 
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-3.png">
+                    <img src="images/portfolio-3.png" alt="travel app image">
                     <h3>Travel App</h3>
                     <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
                 </div>
 
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-4.png">
+                    <img src="images/portfolio-4.png" alt="favorite spots image">
                     <h3>Map of Favorite Spots</h3>
                     <p>This project uses mapping APIs to plot ppints for my favorite spots in the city for a do-it-yourself walking tour.</p>
                 </div>
 
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-5.png">
+                    <img src="images/portfolio-5.png" alt="photo gallery image">
                     <h3>Photo Gallery</h3>
                     <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                 </div>
 
                 <div class="portfolio-item col">
-                    <img src="images/portfolio-6.png">
+                    <img src="images/portfolio-6.png" alt="calculator image">
                     <h3>Calculator</h3>
                     <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
                 </div>
