--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- top section -->
     <header>
         <div class="main-header">
-            <h2 id="home" class="student-name">Meng Yang. Designer.</h2>
+            <h2 class="student-name" id="home">Meng Yang. Designer.</h2>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
         </div>
@@ -33,7 +33,7 @@
     <!-- portfolio section -->
         
         
-    <div class="wrapper clearfix">
+    <div class="wrapper clearfix" id="portfolio">
         <div class="titles">
             <h4>Portfolio</h4>
         </div>
@@ -77,7 +77,7 @@
         </div>
     </div>
     <!-- Contact Section -->
-        <div class="contact">
+        <div class="contact" id="contact">
                 <h4>Contact</h4>
                 <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
                 <p>Phone: <strong>1.234.567.9000</strong></p>
@@ -86,12 +86,12 @@
         <hr>
     <!-- bottom section -->
     <footer class="main-footer clearfix">
-        <div class="footer-name"><h4>Student Name</h4></div>
+        <div class="footer-name"><h4>Meng Yang. Designer.</h4></div>
             <nav class="footer-nav">
                 <ul>
-                    <li>Home</li>
-                    <li>Portfolio</li>
-                    <li>Contact</li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         <div class="footer-anchor"><h4><a href="#top">Back to Top</a></h4></div>
